--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "repo/skin.copacetic"]
 	path = repo/skin.copacetic
 	url = https://github.com/realcopacetic/skin.copacetic.git
+[submodule "repo/script.copacetic.helper"]
+	path = repo/script.copacetic.helper
+	url = https://github.com/realcopacetic/script.copacetic.helper
