--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "repo/script.copacetic.helper"]
 	path = repo/script.copacetic.helper
 	url = https://github.com/realcopacetic/script.copacetic.helper
+[submodule "repo/resource.fonts.copacetic"]
+	path = repo/resource.fonts.copacetic
+	url = https://github.com/realcopacetic/resource.fonts.copacetic
