--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule "repo/skin.copacetic"]
 	path = repo/skin.copacetic
 	url = https://github.com/realcopacetic/skin.copacetic
+	branch = nexus
 [submodule "repo/script.copacetic.helper"]
 	path = repo/script.copacetic.helper
 	url = https://github.com/realcopacetic/script.copacetic.helper
+	branch = nexus
 [submodule "repo/resource.fonts.copacetic"]
 	path = repo/resource.fonts.copacetic
 	url = https://github.com/realcopacetic/resource.fonts.copacetic
+	branch = nexus
