--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,7 @@
 [submodule "repo/script.copacetic.helper"]
 	path = repo/script.copacetic.helper
 	url = https://github.com/realcopacetic/script.copacetic.helper
+	branch = main
 [submodule "repo/resource.fonts.copacetic"]
 	path = repo/resource.fonts.copacetic
 	url = https://github.com/realcopacetic/resource.fonts.copacetic
